--- a/client/s.css
+++ b/client/s.css
@@ -303,7 +303,7 @@ a.goto_article {
     /*border-radius: 10px !important;*/
 }
 .ui.button {
-  margin: 1px !important;
+  /*margin: 1px !important;*/
   /*border-radius: 10px !important; */
   /*transition: height .25s ease !important; */
   /* background-color: rgba(200, 200, 200, 0.2) !important; */
@@ -366,7 +366,7 @@ a.goto_article {
     /*animation: fadeout .5s; */
 }
 /*img.zoomer:hover {*/
-/*    transition: all .1s ease !important; */
+/*    transition: all ..5s ease !important; */
 /*    z-index: 1000 !important;*/
 /*    transform: scale(1.2) !important;*/
 /*}*/
@@ -624,30 +624,33 @@ input {
 
 
 .button:not(.circular){
-  border-radius: 7px !important;  
+  border-radius: 5px !important;  
+}
+.ui.tertiary.button{
+  margin:0px !important;
 }
 .button:active{
-  border-radius: 10px !important;  
-    /* transition: all .25s !important; */
-    /*transform: translate(0, 1px) !important; */
-    /*zoom:105% !important;*/
-    /*-webkit-transform: translate(0, 1px) !important;*/
+  border-radius: 7px !important;  
+  /* transition: all .25s !important; */
+  /*transform: translate(0, 1px) !important; */
+  /*zoom:105% !important;*/
+  /*-webkit-transform: translate(0, 1px) !important;*/
 } 
 
 
 .button,.card,.image,.item,.header,.label,p,img,.say,.pointer{
-    animation: fadein 1s !important;
-    /*-webkit-transition: opacity .1s ease-in !important;*/
-    /* -webkit-transition: opacity .1s ease-out; */
-    /*animation: fadeout .1s; */
+    animation: fadein .5s !important;
+    /*-webkit-transition: opacity ..5s ease-in !important;*/
+    /* -webkit-transition: opacity ..5s ease-out; */
+    /*animation: fadeout ..5s; */
 }
 
 
 .icon:not(.loading){
-    animation: fadein 1s !important;
-    transition: all 1s ease !important;
+    animation: fadein .5s !important;
+    transition: all .5s ease !important;
     /* -webkit-transition: opacity .25s ease-out; */
-    animation: fadeout 1s; 
+    animation: fadeout .5s; 
 }
 
 
@@ -682,7 +685,7 @@ input {
 }
 
 .result_column {
-  /* animation: fadein 1s; */
+  /* animation: fadein .5s; */
 }
 
 @media screen and (max-width: 1100px) {
