--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -103,19 +103,19 @@ template(name='sbt')
                 
 template(name='skve')
     // a.ui.image.big.link.label.set_session_v(class=calculated_class)
-    .ui.zoomer.basic.compact.button.say.set_session_v(class=calculated_class title=t)
+    .ui.zoomer.basic.compact.button.set_session_v.say(class=calculated_class title=t)
         // if i
         if selected 
             // +i n=i cl='ui mini inline image'
-            i.big.icon(class=i)
+            i.large.icon(class=i)
         else
             // +iios n=i cl='ui mini inline image'
-            i.grey.large.icon(class=i)
+            i.grey.icon(class=i)
         unless ionly
             if l
-                span.say #{l}
+                span #{l}
             else 
-                span.say #{v}
+                span #{v}
 
                         
 
