--- a/client/suser.jade
+++ b/client/suser.jade
@@ -179,16 +179,16 @@ template(name='suser_dash')
                 each suser_q
                     +suser_q_item
         .eight.wide.column
-            a.ui.horizontal.divider.pointer.get_comments(href="/s/#{stackuser_doc.site}/u/#{stackuser_doc.user_id}/c")
+            a.ui.horizontal.divider.pointer.get_comments(href="/s/#{stackuser_doc.site}/u/#{stackuser_doc.user_id}/c" title="#{suser_c.count} comments")
+                |#{suser_c.count}
                 i.chat.outline.icon
-                |#{suser_c.count} comments
             .ui.list.medscroll
                 each suser_c
                     +suser_c_item
                     .ui.divider
-            a.ui.horizontal.divider.pointer.get_answers(href="/s/#{stackuser_doc.site}/u/#{stackuser_doc.user_id}/a")
+            a.ui.horizontal.divider.pointer.get_answers(href="/s/#{stackuser_doc.site}/u/#{stackuser_doc.user_id}/a" title="#{suser_c.count} comments") 
+                |#{suser_a.count}
                 i.reply.icon
-                |#{suser_a.count} answers
             .ui.list.medscroll
                 each suser_a
                     +suser_a_item
