many ux refinements, smaller buttons, toggle on entity facets in sq, big suser dash layout improve, rep change stats up top,

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -57,7 +57,7 @@ template(name='loading')
         i.massive.grey.yin.yang.loading.icon
 
 template(name='print_this')
-    i.link.code.icon.print_this(title='print to console')
+    i.link.code.inline.icon.print_this(title='print to console')
 
 
 template(name='viewing')
