--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,6 +1,6 @@
 template(name='nav')
     // a.icon.ui.large.circular.icon.button(href='/')
-    .ui.fluid.attached.seven.item.borderless.grey.menu.topnav
+    .ui.fluid.attached.seven.small.item.borderless.grey.menu.topnav
         // a.icon.header.item.pointer.toggle_leftbar
         //     i.bars.large.grey.icon
         if connected
