--- a/client/suser.jade
+++ b/client/suser.jade
@@ -73,32 +73,6 @@ template(name='suser_layout')
                     a.ui.tertiary.button(href=link target='_window') 
                         i.linkify.icon
                         |SE link
-                    .ui.tertiary.button 
-                        strong rep change
-                    .ui.tertiary.button.say
-                        |#{reputation_change_day} day
-                    .ui.tertiary.button.say
-                        |#{reputation_change_week} week
-                    .ui.tertiary.button.say
-                        |#{reputation_change_month} month
-                    .ui.tertiary.button.say
-                        |#{reputation_change_quarter} quarter
-                    .ui.tertiary.button.say
-                        |#{reputation_change_year} year
-                    .ui.tertiary.button.say
-                        |#{down_vote_count}
-                        i.thumbs.down.outline.icon
-                        |down votes
-                    .ui.tertiary.button.say
-                        i.thumbs.up.outline.icon
-                        | #{up_vote_count}
-                        |up votes
-                    .ui.tertiary.button.say
-                        i.eye.icon
-                        | #{view_count}
-                        |views
-                    .ui.inline.header 
-                        |#{max_emotion_name} #{max_emotion_percent}
                     div
                 .twelve.wide.column
                     +yield
@@ -127,14 +101,40 @@ template(name='suser_a')
 
 template(name='suser_dash')
     .ui.stackable.grid
-        .eight.wide.column
+        .sixteen.wide.column
             .f11.say
                 |!{about_me}
-                // +say k='about_me'
             if website_url
                 a.ui.basic.button.say(href=website_url target="_window")
                     i.globe.icon
                     |#{website_url}
+            .ui.tertiary.button 
+                strong rep change
+            .ui.tertiary.button.say
+                |#{reputation_change_day} day
+            .ui.tertiary.button.say
+                |#{reputation_change_week} week
+            .ui.tertiary.button.say
+                |#{reputation_change_month} month
+            .ui.tertiary.button.say
+                |#{reputation_change_quarter} quarter
+            .ui.tertiary.button.say
+                |#{reputation_change_year} year
+            .ui.tertiary.button.say
+                |#{down_vote_count}
+                i.thumbs.down.outline.icon
+                |down votes
+            .ui.tertiary.button.say
+                i.thumbs.up.outline.icon
+                | #{up_vote_count}
+                |up votes
+            .ui.tertiary.button.say
+                i.eye.icon
+                | #{view_count}
+                |views
+            .ui.inline.header 
+                |#{max_emotion_name} #{max_emotion_percent}
+                    
             .ui.small.inline.header top emotions
             .ui.inline.header #{user_top_emotion}
             each user_top_emotions
@@ -147,15 +147,15 @@ template(name='suser_dash')
                 each tags
                     +flat_tag_selector
                     // .ui.tertiary.button #{this}
+        .eight.wide.column
             .ui.grey.header 
                 i.rss.icon
                 |feed
             each user_events
                 +u_event
-            a.ui.inline.header.zoomer.say(href="/s/#{stackuser_doc.site}/u/#{stackuser_doc.user_id}/q")
-                .ui.header #{title}
+            a.ui.horizontal.divider.zoomer.say_title(href="/s/#{stackuser_doc.site}/u/#{stackuser_doc.user_id}/q" title="view questions")
+                |#{suser_q.count}
                 i.question.icon
-                |#{suser_q.count} questions
             if skv_is 'view_qtags' true
                 .ui.circular.black.zoomer.button.tog_qtags.agg
                     i.tag.icon
@@ -312,7 +312,7 @@ template(name='suser_a_item')
     
 template(name='suser_q_item')
     .ui.item
-        a.ui.header.zoomer.say(href="/s/#{site}/q/#{question_id}" class=post_header_class)
+        a.ui.small.header.zoomer.say(href="/s/#{site}/q/#{question_id}" class=post_header_class)
             strong #{score}:
             |!{title}
         .description
