--- a/client/s.css
+++ b/client/s.css
@@ -170,14 +170,14 @@ html.ios body {
 }
 
 .topnav.menu > .item {
-  border-radius: 20px !important;
+  /*border-radius: 20px !important;*/
 }
 .topnav > .item.active {
   background: lightgrey !important;
   
 }
 .topnav.menu {
-  border-radius: 0 0 10px 10px !important; 
+  /*border-radius: 0 0 10px 10px !important; */
   transition: color 3s ease !important;
   /*background-color: rgba(250,250,250,1) !important; */
   /*background-color: rgba(50,110,100,1) !important; */
